Ahora se puede hacer "java -jar Runner path class"
Despues de 4 horas me doy cuenta que compartia uan biblioteca con el
launcher que impedia la aislación del juego.